--- a/views/list.ejs
+++ b/views/list.ejs
@@ -33,6 +33,11 @@
         </div>
     </nav>
 
+    <% for (var i = 0; i < posts.length; i++) { %>
+      <h4><%= posts[i].제목 %></h4>
+      <p><%= posts[i].날짜 %></p>
+    <% } %>
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
