--- a/views/list.ejs
+++ b/views/list.ejs
@@ -33,15 +33,38 @@
         </div>
     </nav>
 
-    <% for (var i = 0; i < posts.length; i++) { %>
-      <h4><%= posts[i].제목 %></h4>
-      <p><%= posts[i].날짜 %></p>
-    <% } %>
+    <ul class="list-group">
+      <% for (var i = 0; i < posts.length; i++){ %>
+      <li class="list-group-item">
+        <h4> 할일 제목 : <%= posts[i].제목 %> </h4>
+        <p> 할일 마감날짜 : <%= posts[i].날짜 %> </p>
+        <button class="delete" data-id="<%= posts[i]._id %>">삭제</button>
+      </li>
+      <% } %>
+    </ul>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    
+    <script>
+      console.log('check')
+
+
+      $('.delete').click(function(e) {
+        $.ajax({
+        method : 'DELETE',
+        url : '/delete',
+        data : { _id : e.target.dataset.id }
+        }).done(function(res) {
+          console.log('success')
+        }).fail(function(err) {
+          console.log('fail')
+        })
+      })
+    </script>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
