--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="stylesheet" href="/public/main.css">
 
     <title>Hello, world!</title>
   </head>
@@ -31,15 +32,23 @@
             </li>
           </ul>
         </div>
-      </nav>
+    </nav>
 
-      <h4>홈입니다.</h4>
-    
+    <h4>상세페이이지 입니다.</h4>
+    <div class="container mt-3">
+        <div class="card" style="width: 100%">
+          <div class="card-body">
+            <h5 class="card-title"><%= data.제목 %></h5>
+            <h6 class="card-subtitle mb-2 text-muted"><%= data.날짜 %></h6>
+            <p class="card-text">임시내용입니다.</p>
+            <a href="#" class="card-link">수정하기</a>
+          </div>
+        </div>
+      </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
