--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -16,15 +16,16 @@
 
     <div class="container mt-3">
         <form action="/edit?_method=PUT" method="POST">
+            <input value="<%= post._id %>" name="id" style="display : none">
             <div class="form-group">
                 <label>오늘의 할일</label>
                 <input value= "<%= post.제목 %>" type="text" class="form-control" name="title">
             </div>
-        <div class="form-group">
-            <label>날짜</label>
-            <input value="<%= post.날짜 %>" type="text" class="form-control" name="date">
-        </div>
-        <button type="submit" class="btn btn-outline-secondary">Edit</button>
+            <div class="form-group">
+                <label>날짜</label>
+                <input value="<%= post.날짜 %>" type="text" class="form-control" name="date">
+            </div>
+            <button type="submit" class="btn btn-outline-secondary">Edit</button>
         </form>
     </div>
 
